--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,4 +1,4 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# This workflow will install Python dependencies, run the app, and ensure the server is running
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
 name: Python application
@@ -18,22 +18,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    # Step 1: Check out the repository code
     - uses: actions/checkout@v4
+
+    # Step 2: Set up Python 3.10 environment
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+
+    # Step 3: Install dependencies via Makefile
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        make install
+
+    # Step 4: Lint with flake8 (Optional, keep this if you want linting)
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
+
+    # Step 5: Run the application and allow the server time to start
+    - name: Run the web application
       run: |
-        pytest
+        make run &
+        sleep 10  # Sleep to allow the server time to start
+
+    # Step 6: Test whether the server is running on localhost:3000
+    - name: Test server status
+      run: |
+        curl -I http://localhost:3000  # Check if the server responds
